# srpski

./: .gitignore  Dockerfile  README.md  Untitled Diagram.drawio  padezi.drawio  pyproject.toml  requirements.txt  run-docker.sh  run-production-deploy.sh
browser-script/: save-indexed-db-to-file.js  save-telegram-chat.js
chat-gpt/: add-text-to-image.py
dnevnik/: 2024.04.04.haiku.txt  2024.04.05.haiku.txt  2024.04.09.haiku.txt  2024.04.19.haiku.txt  2024.04.28.haiku.txt  2024.04.30.haiku.txt  2024.05.23.haiku.txt  2024.05.23.txt  2024.05.24.txt  2024.05.25.txt  2024.05.26.txt  2024.05.27.txt  2024.05.28.txt  2024.05.29.txt  2024.05.30.txt  2024.05.31.txt  2024.06.01.txt  2024.06.02.txt  2024.06.03.txt  2024.06.04.txt  2024.06.05.haiku.txt  2024.06.06.txt  2024.06.08.txt  2024.06.09.txt  2024.06.10.txt  2024.06.11.txt  2024.06.13.txt  2024.06.14.txt  2024.06.15.txt  2024.06.16.txt  2024.06.19.txt  2024.06.20.txt  2024.06.21.txt  2024.06.22.txt  2024.06.23.txt  2024.06.24.txt  2024.06.25.txt  2024.06.26.txt  2024.06.28.txt  2024.06.29.txt  (+7 more)
docs/: bot-scheme-2024-07-06-1954.excalidraw  bot-scheme-2024-07-07-1242.excalidraw  bot-scheme-2024-07-13-2148.excalidraw
draws/: Enkliktike.drawio  interface.drawio  padezi.drawio
haiku/: 2024.04.04.txt  2024.04.05.txt  2024.04.09.txt  2024.04.19.txt  2024.04.28.txt  2024.04.30.txt  2024.05.23.txt  2024.06.05.txt
mermaid/: bot-blocks.mmd  bot-chart.mmd  bot.mmd
openai/: test.py  upload-files-to-vector-storage.py
samples/: osobine.txt  padeži.html  serbain-cases-in-a-school.html  serbain-cases-in-a-school.txt  (+1 more)
(+73 files in other folders)
